[tool]
[tool.poetry]
name = "root"
version = "0.0.0"
description = "Set the sleep timer for a playing Sonos speaker"
authors = ["Mark Levitt <mark@marklevitt.co.uk"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2019.3.9"
chardet = "^3.0.4"
idna = "^2.8"
requests = "^2.21.0"
urllib3 = "^1.24.3"
xmltodict = "^0.12.0"
soco = "^0.21.1"
