[tool]
[tool.poetry]
name = "root"
version = "0.0.0"
description = "Set the sleep timer for a playing Sonos speaker"
authors = ["Mark Levitt <mark@marklevitt.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "^2024.2.2"
chardet = "^5.2.0"
idna = "^3.7"
requests = "^2.31.0"
urllib3 = "^2.2.1"
xmltodict = "^0.12.0"
soco = "^0.21.1"
